[gd_scene load_steps=2 format=3 uid="uid://d33a8rd8chuqy"]

[ext_resource type="Script" path="res://Editor/Graphics/Palette/Nodes/PaletteRecord.gd" id="1_tav4g"]

[node name="PaletteRecord" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(0, 58)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_tav4g")
preview_mode = 1
resource_name = "Hello"
resource_path = "steele:what_what:1"
resource_weight = 50
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="margin_preview" type="MarginContainer" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(106, 48)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="node_preview" type="Node2D" parent="HBoxContainer/margin_preview"]
position = Vector2(53, 29)

[node name="vsp_1" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="margin_name" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="HBoxContainer/margin_name"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/margin_name/vbox"]
layout_mode = 2
text = "Hello"

[node name="Path" type="Label" parent="HBoxContainer/margin_name/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "steele:what_what:1"

[node name="vsp_2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="margin_weight" type="MarginContainer" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Weight" type="LineEdit" parent="HBoxContainer/margin_weight"]
layout_mode = 2
text = "50"

[node name="PreviewTimer" type="Timer" parent="."]

[connection signal="focus_exited" from="HBoxContainer/margin_weight/Weight" to="." method="handle_weight_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/margin_weight/Weight" to="." method="_on_weight_text_changed"]
[connection signal="timeout" from="PreviewTimer" to="." method="handle_preview_timer_timeout"]
